Attempt to fix table font size on mobile

--- a/styles.css
+++ b/styles.css
@@ -224,6 +224,7 @@ td {
   vertical-align: center;
   height: 2em;
   color: var(--text-light);
+  font-size: 1em !important;
 }
 
 .left {
